# Adversarial_RL_XSS

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
data/: .gitignore  adv_xss.txt  filtered_oracle.csv  mutated_attacks.csv  sorted_tokens.csv  test.csv  train.csv  val.csv
data/adversarial_agents/: adv_xss.txt
data/detectors/: test_old.csv  train_old.csv  val_old.csv
docs/: artifacts.md
models/: CNN_detector.pth  MLP_detector.pth
notebooks/: run_experiment_pipeline.ipynb
reproduction/data/: vocabulary.csv
reproduction/models/: CNN_detector.pth  LSTM_detector.pth  MLP_detector.pth
runs/cnn/10/run_0/: checkpoint.pth  config.json  mutated_test_results.json  test_results.json
runs/cnn/10/run_0/adversarial_agent/run_0/: empirical_study_set.csv  evaluations.npz  results.json  ruin_rate.json  successes_test_set.csv  validity.csv
runs/cnn/10/run_0/adversarial_agent/run_1/: empirical_study_set.csv  evaluations.npz  (+4 more)
runs/lstm/10/run_0/: checkpoint.pth  config.json  mutated_test_results.json  test_results.json
runs/mlp/10/run_0/: checkpoint.pth  config.json  mutated_test_results.json  test_results.json
src/: analyze_validity.py  main.py  prepare_RL_dataset.py  prepare_dataset.py  prepare_detectors_dataset.py  summarize_results.py  test_adversarial_agent.py  test_detector.py  test_validity_mutated_dataset.py  train_adversarial_agent.py  train_detector.py
src/datasets/: xss_dataset.py
src/detection_models/: CNN_detector.py  LSTM_detector.py  MLP_detector.py  test_model.py  validate_model.py
src/detection_models/classes/: CNN.py  LSTM.py  MLP.py
src/detection_models/utils/: general.py
src/envs/: detector_env.py  eval_env.py  oracle_guided_reward_wrapper.py  test_env.py  train_env.py
src/filters/: filter_dataset.py  filter_xss_with_oracle.py
src/models/: MLP.py
src/mutators/: mutators.py
src/reinforcement_learning/: RL.py  mutators.py  test.py  test_RL.py  train_RL.py
src/utils/: __init__.py  dataset_utils.py  html_tools.py  mutators.py  path_utils.py  preprocess.py  preprocessor.py  request_tools.py  tokenizer.py  utils.py  vectorizer.py
src_old/detection_models/: CNN_detector.py  MLP_detector.py  validate_model.py
src_old/filters/: dataset_split.py
src_old/reinforcement_learning/: RL.py  oracle_check.py  train_RL.py
src_old/utils/: vectorizer.py
(+42 files in other folders)
