[tool.poetry]
name = "xss-detection-model"
version = "0.1.0"
description = ""
authors = ["Gianluca <gianluca.maragliano@usi.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
bs4 = "^0.0.2"
nltk = "^3.8.1"
torch = "^2.2.1"
torchvision = "^0.17.1"
requests = "^2.31.0"
zss = "^1.2.0"
dvc = "^3.48.3"
dvc-gdrive = "^3.0.1"
tensorboard = "^2.16.2"
torchinfo = "^1.8.0"
gymnasium = "^0.29.1"
stable-baselines3 = {extras = ["extra"], version = "^2.3.0"}
validators = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
