[tool.poetry]
name = "xss-detection-model"
version = "0.1.0"
description = ""
authors = ["Gianluca <gianluca.maragliano@usi.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
bs4 = "^0.0.2"
nltk = "^3.8.1"
torch = "^2.2.1"
torchvision = "^0.17.1"
requests = "^2.31.0"
zss = "^1.2.0"
tensorboard = "^2.16.2"
torchinfo = "^1.8.0"
validators = "^0.28.0"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
jinja2 = "^3.1.2"
markupsafe = "^2.1.3"
gymnasium = "^1.0.0"
stable-baselines3 = "^2.4.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
